force-app/main/default/objects/SCC_Endpoint_API__mdt/SCC_Endpoint_API__mdt.object-meta.xml
<CustomObject>
    <label>SCC Endpoint API</label>
    <pluralLabel>SCC Endpoint API</pluralLabel>
</CustomObject>