force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>api-key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>