force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/api_name__c.field-meta.xml
<CustomField>
    <fullName>api_name__c</fullName>
    <label>api-name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>