force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>