force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/profileLink__c.field-meta.xml
<CustomField>
    <fullName>profileLink__c</fullName>
    <label>profileLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>