force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/Save_Log__c.field-meta.xml
<CustomField>
    <fullName>Save_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Log</label>
    <type>Checkbox</type>
</CustomField>