force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_Data__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHM</fullName>
                <default>true</default>
                <label>CHM</label>
            </value>
            <value>
                <fullName>CHM Support</fullName>
            </value>
            <value>
                <fullName>Drone</fullName>
            </value>
            <value>
                <fullName>Rekon</fullName>
            </value>
            <value>
                <fullName>Data Hub</fullName>
            </value>
            <value>
                <fullName>BRI Notif</fullName>
            </value>
            <value>
                <fullName>EJOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>