force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHMS-Token</fullName>
                <default>true</default>
                <label>CHMS-Token</label>
            </value>
            <value>
                <fullName>BRI-Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>