force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/Username_MMS__c.field-meta.xml
<CustomField>
    <fullName>Username_MMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Username MMS</label>
    <type>Checkbox</type>
</CustomField>