force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <label>x-api-key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>