force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/X_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>X_ApiKey__c</fullName>
    <label>X-ApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>