force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/X_ChannelId__c.field-meta.xml
<CustomField>
    <fullName>X_ChannelId__c</fullName>
    <label>X-ChannelId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>