force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/X_DATAHUB_PERSONAL_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>X_DATAHUB_PERSONAL_NUMBER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X-DATAHUB-PERSONAL-NUMBER</label>
    <type>Checkbox</type>
</CustomField>