force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/X_DATAHUB_USER__c.field-meta.xml
<CustomField>
    <fullName>X_DATAHUB_USER__c</fullName>
    <label>X-DATAHUB-USER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>