force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/x_hasura_admin_secret__c.field-meta.xml
<CustomField>
    <fullName>x_hasura_admin_secret__c</fullName>
    <description>x-hasura-admin-secret</description>
    <label>x-hasura-admin-secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>