force-app/main/default/objects/SCC_Endpoint_API__mdt/fields/X_ReffNumber__c.field-meta.xml
<CustomField>
    <fullName>X_ReffNumber__c</fullName>
    <label>X-ReffNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>